# Better-file-system

./: README.md  setup.cfg  setup.py
Better_file_system.egg-info/: PKG-INFO  SOURCES.txt
base-folder/: __init__.py  betterFileSystem.py
src/simpleFiles/: __init__.py  betterFileSystem.py
src/simpleFiles.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
