[metadata]
name = simpleFiles
version = 1.0.7
author = Tzur
author_email = tzur.soffer@gmail.com
description = A better file system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RandomTheFirst/Better-file-system
project_urls =
    Bug Tracker = https://github.com/RandomTheFirst/Better-file-system
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src